--- a/Recolor/l10n/es-ES.json
+++ b/Recolor/l10n/es-ES.json
@@ -62,11 +62,28 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "¿Eliminar Recolor de forma segura?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Atajo de teclado para la herramienta para pintar colores",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Atajo de teclado para activar la herramienta para pintar de colores.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Activar el modo de selector de Redes de Vallas/Setos",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Atajo de teclado para activar el modo de herramienta para seleccionar redes de vallas o setos.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Tecla de activación de la herramienta para pintar colores",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Restablecer atajos de teclado del mod Recolor",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Al confirmar se restablecerán todos los atajos de teclado de Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "¿Restablecer atajos de teclado del mod Recolor?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Los cambios de color de objeto único para las plantas, no están soportados actualmente.",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "No se puede cambiar la variación de color en esto, ya que tiene colores de objeto personalizados."
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "No se puede cambiar la variación de color en esto, ya que tiene colores de objeto personalizados.",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Seleccione una red de valla o seto.",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Activa o desactiva el canal.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "Alterna si los campos de entrada hexadecimal se muestran o no.",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "Intercambia colores entre dos canales.",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "Vehículos de Servicio",
+  "Recolor.TOOLTIP_DESCRIPTION[ServiceVehicles]": "Cambia los colores de todos los vehículos de servicio propiedad del mismo edificio de servicios. Los vehículos de servicio nuevos, del mismo edificio, también tendrán el mismo conjunto de colores.",
+  "Recolor.TOOLTIP_TITLE[RouteVehicles]": "Vehículos con Ruta",
+  "Recolor.TOOLTIP_DESCRIPTION[RouteVehicles]": "Cambia los colores de todos los vehículos asignados a una ruta. Los vehículos recién creados en la ruta también tendrán el mismo conjunto de colores.",
+  "Recolor.TOOLTIP_TITLE[SingleSubMesh]": "Submalla Individual",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSubMesh]": "Cambia los colores de la submalla individual seleccionada.",
+  "Recolor.TOOLTIP_TITLE[MatchingSubmeshes]": "Submalla Coincidente",
+  "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "Cambia los colores de las submallas con nombres coincidentes.",
+  "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "Todas las Submallas",
+  "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "Cambia los colores de todas las submallas.",
+  "Recolor.SECTION_TITLE[SubMeshes]": "Submallas"
 }
