--- a/Recolor/l10n/ko-KR.json
+++ b/Recolor/l10n/ko-KR.json
@@ -62,11 +62,28 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "안전하게 재색상 모드를 제거하시겠습니까?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "색상 페인터 도구 키 바인드",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "색상 페인터 도구를 활성화하는 키 바인드.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "넷라인 울타리/덤불 선택모드 활성화",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "넷라인 울타리 및 덤불 선택 도구 모드를 활성화하는 키보드 단축키.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "재색상",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "색상 페인터 도구 활성화 키",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "재색상 모드 키 바인딩 초기화",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "확인을 누르면 재색상 모드의 키 바인딩이 초기화됩니다.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "재색상 모드의 키 바인딩을 초기화하시겠습니까?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "식물의 단일 인스턴스 색상 변경은 현재 지원되지 않습니다.",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "이 항목은 사용자 지정 인스턴스 색상을 가지고 있어 색상을 변경할 수 없습니다."
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "이 항목은 사용자 지정 인스턴스 색상을 가지고 있어 색상을 변경할 수 없습니다.",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "넷라인 울타리 또는 덤불을 선택하세요.",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "채널을 켜거나 끕니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "16진수 입력 필드가 표시되는지 여부를 전환합니다.",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "두 채널 간 색상을 바꿉니다.",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "서비스 차량",
+  "Recolor.TOOLTIP_DESCRIPTION[ServiceVehicles]": "동일한 서비스 건물에 소속된 모든 서비스 차량의 색상을 변경합니다. 새로 생성된 서비스 차량도 동일한 색상이 적용됩니다.",
+  "Recolor.TOOLTIP_TITLE[RouteVehicles]": "차량 경로",
+  "Recolor.TOOLTIP_DESCRIPTION[RouteVehicles]": "경로에 할당된 모든 차량의 색상을 변경합니다. 새로 생성된 차량도 동일한 색상이 적용됩니다.",
+  "Recolor.TOOLTIP_TITLE[SingleSubMesh]": "단일 서브메시",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSubMesh]": "선택된 각각의 서브메시의 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[MatchingSubmeshes]": "서브메시 매칭",
+  "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "일치하는 이름의 서브메시만 색상을 변경합니다.",
+  "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "모든 서브메시",
+  "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "모든 서브메시의 색상을 변경합니다.",
+  "Recolor.SECTION_TITLE[SubMeshes]": "서브메시"
 }
