--- a/Recolor/l10n/pl-PL.json
+++ b/Recolor/l10n/pl-PL.json
@@ -23,7 +23,7 @@
   "Recolor.SECTION_TITLE[Selection]": "Wybór",
   "Recolor.TOOLTIP_TITLE[SingleSelection]": "Jeden",
   "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "Zmienia kolory jednego budynku, rekwizytu lub pojazdu.",
-  "Recolor.TOOLTIP_TITLE[RadiusSelection]": "Wybór promienia",
+  "Recolor.TOOLTIP_TITLE[RadiusSelection]": "Wybór w promieniu",
   "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "Zmienia indywidualne kolory budynków, rekwizytów i/lub pojazdów w promieniu.",
   "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "Zwiększ promień.",
   "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Zmniejsz promień.",
@@ -62,11 +62,28 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Bezpiecznie usuń moda Recolor?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Narzędzie malowania",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Skrót klawiszowy do aktywowania narzędzia malowania.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Aktywuj tryb wyboru ogrodzenia/żywopłotu NetLane",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Skrót klawiaturowy do aktywowania trybu wyboru ogrodzenia/żywopłotu NetLane narzędzia.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Narzędzie malowania",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Zresetuj skróty klawiszowe moda Recolor",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Po potwierdzeniu spowoduje to zresetowanie skrótów klawiszowych moda Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Zresetować skróty klawiszowe moda Recolor?",
-  "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Zmiany indywidualnych kolorów dla pojedynczych roślin nie są obecnie obsługiwane.",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Nie można zmienić wariantu kolorystycznego, ponieważ posiada on niestandardowe indywidualne kolory."
+  "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Zmiany kolorów dla indywidualnych roślin nie są obecnie obsługiwane.",
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Nie można zmienić wariantu kolorystycznego, ponieważ posiada on niestandardowe indywidualne kolory.",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Wybierz ogrodzenie lub żywopłot NetLane.",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Włącz lub wyłącz kanał.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "Przełącz wyświetlanie kodów Heksadecymalnych kolorów.",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "Przenieś kolory między kanałami.",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "Pojazdy usług",
+  "Recolor.TOOLTIP_DESCRIPTION[ServiceVehicles]": "Zmień kolory wszystkich pojazdów usług należących do tego samego budynku usługowego. Nowo utworzone pojazdy usług należące do tego samego budynku również będą miały ten sam zestaw kolorów.",
+  "Recolor.TOOLTIP_TITLE[RouteVehicles]": "Pojazdy liniowe",
+  "Recolor.TOOLTIP_DESCRIPTION[RouteVehicles]": "Zmień kolory wszystkich pojazdów przypisanych do linii. Nowo utworzone pojazdy na linii będą miały ten sam zestaw kolorów.",
+  "Recolor.TOOLTIP_TITLE[SingleSubMesh]": "Pojedynczy Submesh",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSubMesh]": "Zmienia kolory wybranego indywidualnego Submeshu.",
+  "Recolor.TOOLTIP_TITLE[MatchingSubmeshes]": "Dopasowywanie Submeshe",
+  "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "Zmienia kolory o dopasowanych nazwach submeshy.",
+  "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "Wszystkie Submeshe",
+  "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "Zmienia kolory wszystkich submeshy.",
+  "Recolor.SECTION_TITLE[SubMeshes]": "SubMeshe"
 }
