--- a/Recolor/lang/pt-PT.json
+++ b/Recolor/lang/pt-PT.json
@@ -62,11 +62,28 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Remover Recolor em segurança?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Ativação da ferramenta de pintura de cores",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Uma tecla de atalho para ativar a ferramenta de pintura de cores.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Activar selector NetLane/Vedações",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Atalho de teclado para activar o selector NetLane/Vedações.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Tecla de ativação da ferramenta de pintura de cores",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Com confirmação, isto irá repor as teclas de atalho do mod Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Alterações de cor de instâncias únicas para plantas não são suportadas atualmente.",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Não é possível alterar a variação de cor neste caso porque tem cores de instância personalizadas."
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Não é possível alterar a variação de cor neste caso porque tem cores de instância personalizadas.",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Seleccionar uma NetLane ou Vedação.",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Alternar o estado do canal.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "Alterar a visibilidade dos campos Hexadecimais.",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "Trocar as cores entre os dois canais.",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "Veículos de Serviço",
+  "Recolor.TOOLTIP_DESCRIPTION[ServiceVehicles]": "Altera as cores de todos os veículos de serviço pertencentes ao mesmo edifício de serviços. Novos veículos de serviço criados pelo mesmo edifício também utilizarão este conjunto de cores.",
+  "Recolor.TOOLTIP_TITLE[RouteVehicles]": "Veículos da Rota",
+  "Recolor.TOOLTIP_DESCRIPTION[RouteVehicles]": "Altera as cores de todos os veículos assignados a uma rota. Novos veículos criados para a rota também utilizarão este conjunto de cores.",
+  "Recolor.TOOLTIP_TITLE[SingleSubMesh]": "Sub-material Específico",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSubMesh]": "Altera as cores do sub-material seleccionado.",
+  "Recolor.TOOLTIP_TITLE[MatchingSubmeshes]": "Sub-materiais Idênticos",
+  "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "Altera as cores dos sub-materiais com nomes idênticos.",
+  "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "Todos os sub-materiais",
+  "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "Altera as cores de todos os sub-materiais.",
+  "Recolor.SECTION_TITLE[SubMeshes]": "Sub-materiais"
 }
