--- a/Recolor/l10n/zh-HANS.json
+++ b/Recolor/l10n/zh-HANS.json
@@ -2,7 +2,7 @@
   "Options.SECTION[Recolor.Recolor.Mod]": "Recolor",
   "Recolor.SECTION_TITLE[InfoRowTitle]": "调整颜色",
   "Recolor.TOOLTIP_DESCRIPTION[InfoRowTooltip]": "用于更改资产的颜色。",
-  "Recolor.SECTION_TITLE[ColorSet]": "颜色设定",
+  "Recolor.SECTION_TITLE[ColorSet]": "颜色集",
   "Recolor.TOOLTIP_DESCRIPTION[Minimize]": "最小化 Recolor 模组的面板以节省空间。",
   "Recolor.TOOLTIP_DESCRIPTION[Expand]": "展开 Recolor 模组的面板以供使用。",
   "Recolor.TOOLTIP_DESCRIPTION[ColorPicker]": "激活颜色选择工具。",
@@ -62,11 +62,28 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "确定要安全移除 Recolor 模组吗?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "颜色绘制工具的快捷键",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "打开颜色绘制工具的快捷键。",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "激活栅栏网络/树篱网络选择器模式",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "激活栅栏网络/树篱网络选择器模式的快捷键。",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "打开颜色绘制工具的快捷键",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "重置 Recolor 模组的快捷键设置",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "确认后，将会重置 Recolor 模组的快捷键设置。",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "确定要重置 Recolor 模组的快捷键设置吗?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "目前不支持更改植物的单一实例颜色。",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "无法更改该资产的颜色，因为它有自定义的实例颜色。"
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "无法更改该资产的颜色，因为它有自定义的实例颜色。",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "选择一个栅栏网络或者树篱网络。",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "打开或者关闭通道。",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "切换是否显示十六进制字段。",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "在两个通道之间交换颜色。",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "公共服务车辆",
+  "Recolor.TOOLTIP_DESCRIPTION[ServiceVehicles]": "更改属于同一公共服务建筑的所有服务车辆的颜色。同一建筑内新增的服务车辆也将具有相同的颜色集。",
+  "Recolor.TOOLTIP_TITLE[RouteVehicles]": "固定线路载具",
+  "Recolor.TOOLTIP_DESCRIPTION[RouteVehicles]": "更改指定线路上所有载具的颜色。线路上新增的载具也将具有相同的颜色集。",
+  "Recolor.TOOLTIP_TITLE[SingleSubMesh]": "单个子网格",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSubMesh]": "更改选中的单个子网格的颜色。",
+  "Recolor.TOOLTIP_TITLE[MatchingSubmeshes]": "匹配的子网格",
+  "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "更改符合名称的子网格的颜色。",
+  "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "所有子网格",
+  "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "更改所有子网格的颜色。",
+  "Recolor.SECTION_TITLE[SubMeshes]": "子网格"
 }
