--- a/Recolor/l10n/fr-FR.json
+++ b/Recolor/l10n/fr-FR.json
@@ -62,11 +62,18 @@
   "Options.WARNING[Recolor.Recolor.Mod.Setting.SafelyRemove]": "Supprimer Recolor ?",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Raccourci clavier de l’outil Peindre",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ActivateColorPainter]": "Raccourci clavier pour activer l’outil Peindre.",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Activer le mode de sélection NetLane pour les clôturees/haie",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.FenceSelectorMode]": "Raccourci clavier pour activer le mode outil pour sélectionner les clôtures et haies dans une NetLane.",
   "Options.INPUT_MAP[Recolor.Recolor.Mod]": "Recolor",
   "Options.OPTION[Recolor.Recolor.Mod/ActivateColorPainter/binding]": "Outil Peindre",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Réinitialiser les raccourcis clavier",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Après confirmation, cela réinitialisera les raccourcis clavier personnalisés pour le mod Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Réinitialiser les raccourcis clavier de Recolor ?",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Le changement de couleur d’instance n’est pas encore pris en charge pour la végétation.",
-  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Impossible de modifier la variation de couleur par correspondance sur cet objet car il a des couleurs d’instance personnalisées."
+  "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Impossible de modifier la variation de couleur par correspondance sur cet objet car il a des couleurs d’instance personnalisées.",
+  "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Sélectionnez une NetLane d'une clôture ou d'une haie.",
+  "Recolor.TOOLTIP_DESCRIPTION[ToggleChannel]": "Active/désactive le canal.",
+  "Recolor.TOOLTIP_DESCRIPTION[ShowHexaDecimals]": "Affiche les champs de saisie Hexadécimale ou non.",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapColors]": "Échange les couleurs entre deux canaux.",
+  "Recolor.TOOLTIP_TITLE[ServiceVehicles]": "Véhicules de services"
 }
