implemented localization for most if not all fixed strings progress towards localization of input fields

--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -87,5 +87,38 @@
   "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "Changes the colors of submeshes with matching names.",
   "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "All Submeshes",
   "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "Changes the colors of all submeshes.",
-  "Recolor.SECTION_TITLE[SubMeshes]": "SubMeshes"
+  "Recolor.SECTION_TITLE[SubMeshes]": "SubMeshes",
+  "Recolor.SECTION_TITLE[PaletteEditorMenu]": "Palette Editor Menu",
+  "Recolor.SECTION_TITLE[Palette]": "Palette",
+  "Recolor.TOOLTIP_DESCRIPTION[SavePalette]": "Save Palette",
+  "Recolor.TOOLTIP_DESCRIPTION[DeletePalette]": "Delete Palette",
+  "Recolor.SECTION_TITLE[Subcategory]": "Subcategory",
+  "Recolor.TOOLTIP_DESCRIPTION[EditSubcategory]": "Edit Subcategory",
+  "Recolor.SECTION_TITLE[FilterType]": "Filter Type",
+  "Recolor.SECTION_TITLE[FilterChoices]": "Filter Choices",
+  "Recolor.TOOLTIP_DESCRIPTION[AddSubcategory]": "Generate a new Subcategory.",
+  "Recolor.TOOLTIP_DESCRIPTION[AddFilter]": "Add a compatible filter.",
+  "Recolor.TOOLTIP_DESCRIPTION[RemoveFilter]": "Remove a compatible filter.",
+  "Recolor.SECTION_TITLE[AddSwatch]": "Add a Swatch",
+  "Recolor.TOOLTIP_DESCRIPTION[AddSwatch]": "Generates an additional and randomly colored swatch.",
+  "Recolor.TOOLTIP_DESCRIPTION[RemoveSwatch]": "Remove this swatch from the palette.",
+  "Recolor.TOOLTIP_DESCRIPTION[RandomizeSwatch]": "Randomize the color of this swatch.",
+  "Recolor.TOOLTIP_DESCRIPTION[ProbabilityWeight]": "Probability Weight",
+  "Recolor.SECTION_TITLE[Category]": "Category",
+  "Recolor.TOOLTIP_DESCRIPTION[BuildingCategory]": "Palette will be available to use for Buildings.",
+  "Recolor.TOOLTIP_DESCRIPTION[VehicleCategory]": "Palette will be available to use for Vehicles.",
+  "Recolor.TOOLTIP_DESCRIPTION[PropCategory]": "Palette will be available to use for Props.",
+  "Recolor.TOOLTIP_DESCRIPTION[AllCategories]": "Palette will not be limited based on category.",
+  "Recolor.TOOLTIP_DESCRIPTION[AddLocale]": "Adds another set of input fields for entering translations for another language.",
+  "Recolor.SECTION_TITLE[AddALocale]": "Add a Locale",
+  "Recolor.SECTION_TITLE[UniqueName]": "Unique Name",
+  "Recolor.SECTION_TITLE[None]": "None",
+  "Recolor.TOOLTIP_DESCRIPTION[EditPalette]": "Edit the selected palette.",
+  "Recolor.TOOLTIP_DESCRIPTION[CopyPalette]": "Copy the selected palette to paste later.",
+  "Recolor.TOOLTIP_DESCRIPTION[PastePalette]": "Paste the copied palette.",
+  "Recolor.TOOLTIP_DESCRIPTION[SaveSubcategory]": "Save Subcategory",
+  "Recolor.TOOLTIP_DESCRIPTION[DeleteSubcategory]": "Delete Subcategory",
+  "Recolor.SECTION_TITLE[LocaleCode]": "Locale Code",
+  "Recolor.SECTION_TITLE[LocalizedName]": "Localized Name",
+  "Recolor.SECTION_TITLE[LocalizedDescription]": "Localized Description"
 }
