progress on palettes during placement

--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -122,5 +122,6 @@
   "Recolor.SECTION_TITLE[LocalizedName]": "Localized Name",
   "Recolor.SECTION_TITLE[LocalizedDescription]": "Localized Description",
   "Recolor.TOOLTIP_DESCRIPTION[RemoveALocale]": "Remove a Locale",
-  "Recolor.Subcategory.NAME[No Subcategory]": "No Subcategory"
+  "Recolor.Subcategory.NAME[No Subcategory]": "No Subcategory",
+  "Recolor.TOOLTIP_DESCRIPTION[SwapPalettes]": "Swap Palettes between channels."
 }
