changed walls to also include prop category made subcategories override category of individual prefabs

--- a/Recolor/ShippedPrefabs/.PalettePrefabs/WhiteWashes/l10n/en-US.json
+++ b/Recolor/ShippedPrefabs/.PalettePrefabs/WhiteWashes/l10n/en-US.json
@@ -1,4 +1,4 @@
 {
-    "Recolor.Palette.NAME[WhiteWashes]": "White Washes",
-    "Recolor.Palette.DESCRIPTION[WhiteWashes]": "White and off-white colors."
+    "Recolor.Palette.NAME[WhiteWashes]": "Pastels",
+    "Recolor.Palette.DESCRIPTION[WhiteWashes]": ""
 }
