--- a/Recolor/ShippedPrefabs/.PalettePrefabs/RedBrick/l10n/en-US.json
+++ b/Recolor/ShippedPrefabs/.PalettePrefabs/RedBrick/l10n/en-US.json
@@ -1,4 +1,4 @@
 {
-    "Recolor.Palette.NAME[RedBrick]": "Red Brick",
+    "Recolor.Palette.NAME[RedBrick]": "Pastels",
     "Recolor.Palette.DESCRIPTION[RedBrick]": ""
 }
