Implemented restore default palettes settings button implemented safely remove, removes all palettes and subcategories. fix some bad localization for palettes fix palette editor menu showing with incompatible assets with object tool or net tool added netlanes as a category

--- a/Recolor/ShippedPrefabs/.PalettePrefabs/RedBrick/l10n/en-US.json
+++ b/Recolor/ShippedPrefabs/.PalettePrefabs/RedBrick/l10n/en-US.json
@@ -1,4 +1,4 @@
 {
-    "Recolor.Palette.NAME[RedBrick]": "Pastels",
-    "Recolor.Palette.DESCRIPTION[RedBrick]": ""
+  "Recolor.Palette.NAME[RedBrick]": "Red Brick",
+  "Recolor.Palette.DESCRIPTION[RedBrick]": ""
 }
