--- a/Recolor/ShippedPrefabs/.PalettePrefabs/WhiteWashes/l10n/en-US.json
+++ b/Recolor/ShippedPrefabs/.PalettePrefabs/WhiteWashes/l10n/en-US.json
@@ -1,4 +1,4 @@
 {
-    "Recolor.Palette.NAME[WhiteWashes]": "Pastels",
-    "Recolor.Palette.DESCRIPTION[WhiteWashes]": ""
+  "Recolor.Palette.NAME[WhiteWashes]": "White Washes",
+  "Recolor.Palette.DESCRIPTION[WhiteWashes]": "White and off-white colors."
 }
