--- a/Recolor/lang/pt-PT.json
+++ b/Recolor/lang/pt-PT.json
@@ -69,6 +69,8 @@
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Com confirmação, isto irá repor as teclas de atalho do mod Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.AlwaysMinimizedAtGameStart]": "Sempre minimizado ao iniciar o jogo",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.AlwaysMinimizedAtGameStart]": "Quando ativado, o painel Recolor sempre iniciará minimizado. Quando desativado, o painel de Recolor iniciará minimizado ou não com base em se foi minimizado ou não na última vez que fechaste o jogo.",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Alterações de cor de instâncias únicas para plantas não são suportadas atualmente.",
   "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Não é possível alterar a variação de cor neste caso porque tem cores de instância personalizadas.",
   "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Seleccionar uma NetLane ou Vedação.",
