--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -29,14 +29,14 @@
   "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Decrease the radius.",
   "Recolor.SECTION_TITLE[Radius]": "Radius",
   "Recolor.SECTION_TITLE[Filter]": "Filter",
-  "Recolor.TOOLTIP_TITLE[BuildingFilter]": "Building Filter",
+  "Recolor.TOOLTIP_TITLE[BuildingFilter]": "Building Category",
   "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "Color Painter tool will change single instance colors of buildings.",
-  "Recolor.TOOLTIP_TITLE[PropFilter]": "Prop Filter",
+  "Recolor.TOOLTIP_TITLE[PropFilter]": "Prop Category",
   "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "Color Painter tool will change single instance colors of props.",
-  "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Vehicle Filter",
+  "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Vehicle Category",
   "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "Color Painter tool will change single instance colors of vehicles.",
-  "Recolor.TOOLTIP_TITLE[NetLaneFilter]": "Net Lane Filter",
-  "Recolor.TOOLTIP_DESCRIPTION[NetLaneFilter]": "Color Painter tool will change single instance colors of Net Lane Fences and Walls",
+  "Recolor.TOOLTIP_TITLE[NetLanePainterCategory]": "Net Lane Category",
+  "Recolor.TOOLTIP_DESCRIPTION[NetLanePainterCategory]": "Color Painter tool will change single instance colors of Net Lane Fences and Walls",
   "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Paint",
   "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Left Click: Changes single instance colors or matching color variations on a selection. Right Click: Resets single instance colors back to color variation or custom color variations back to originals.",
   "Recolor.TOOLTIP_TITLE[ResetToolMode]": "Reset",
