updated some localization and change log.

--- a/Recolor/UI/src/mods/lang/en-US.json
+++ b/Recolor/UI/src/mods/lang/en-US.json
@@ -22,9 +22,9 @@
   "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Change the colors of all assets with the same mesh, color variation (and season, if applicable). Single Instance will override this for that instance.",
   "Recolor.SECTION_TITLE[Selection]": "Selection",
   "Recolor.TOOLTIP_TITLE[SingleSelection]": "Single",
-  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "Changes the colors of one buildings, prop, or vehicle.",
+  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "Changes the colors of one compatible buildings, prop, vehicle, or Net Lanes Fence / Wall. Sub-elements are supported.",
   "Recolor.TOOLTIP_TITLE[RadiusSelection]": "Radius Selection",
-  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "Changes the single instance colors of buildings, prop, and/or vehicles within the radius.",
+  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "Changes the single instance colors of compatible buildings, props, vehicles or Net Lanes Fences / Walls within the radius. Sub-elements are not supported.",
   "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "Increase the radius.",
   "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Decrease the radius.",
   "Recolor.SECTION_TITLE[Radius]": "Radius",
@@ -132,10 +132,10 @@
   "Recolor.TOOLTIP_DESCRIPTION[GenerateNewPalette]": "Generate a new Palette and open the Palette Editor Menu.",
   "Recolor.TOOLTIP_DESCRIPTION[CloseEditorPanel]": "Close the Palette Editor Menu.",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ShowPalettesOptionDuringPlacement]": "Show Palette options while placing objects",
-  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ShowPalettesOptionDuringPlacement]": "Toggles whether to show dropdowns for picking palettes for the three color channels while placing objects with the Object tool.",
-  "Recolor.TOOLTIP_DESCRIPTION[HidePalettesDuringPlacement]": "Hides the palette choosers while placing objects with the Object tool. Restore using the mod's settings.",
-  "Recolor.TOOLTIP_DESCRIPTION[MinimizeDuringPlacement]": "Minimize the palette choosers while placing objects to save space.",
-  "Recolor.TOOLTIP_DESCRIPTION[ExpandDuringPlacement]": "Expands the palette choosers while placing objects for use.",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ShowPalettesOptionDuringPlacement]": "Toggles whether to show dropdowns for picking palettes for the three color channels while placing compatible prefabs.",
+  "Recolor.TOOLTIP_DESCRIPTION[HidePalettesDuringPlacement]": "Hides the palette choosers while placing compatible prefabs. Restore using the mod's settings.",
+  "Recolor.TOOLTIP_DESCRIPTION[MinimizeDuringPlacement]": "Minimize the palette choosers while  while placing compatible prefabs to save space.",
+  "Recolor.TOOLTIP_DESCRIPTION[ExpandDuringPlacement]": "Expands the palette choosers while placing compatible prefabs for use.",
   "Recolor.TOOLTIP_DESCRIPTION[ResetPaletteChoosersToNone]": "Resets the palette choosers channels to all be None.",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.RestoreDefaultPalettes]": "Restore Default Palettes and Subcategories.",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.RestoreDefaultPalettes]": "On confirmation, will re-install original files for pre-built Palettes and Subcategories. Any edits will be lost. This cannot be undone. Custom Palettes and Subcategories with different unique names than pre-built will not be affected. Restarting the game is required afterwards.",
