--- a/Recolor/l10n/en-US.json
+++ b/Recolor/l10n/en-US.json
@@ -134,7 +134,7 @@
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ShowPalettesOptionDuringPlacement]": "Show Palette options while placing objects",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ShowPalettesOptionDuringPlacement]": "Toggles whether to show dropdowns for picking palettes for the three color channels while placing compatible prefabs.",
   "Recolor.TOOLTIP_DESCRIPTION[HidePalettesDuringPlacement]": "Hides the palette choosers while placing compatible prefabs. Restore using the mod's settings.",
-  "Recolor.TOOLTIP_DESCRIPTION[MinimizeDuringPlacement]": "Minimize the palette choosers while  while placing compatible prefabs to save space.",
+  "Recolor.TOOLTIP_DESCRIPTION[MinimizeDuringPlacement]": "Minimize the palette choosers while placing compatible prefabs to save space.",
   "Recolor.TOOLTIP_DESCRIPTION[ExpandDuringPlacement]": "Expands the palette choosers while placing compatible prefabs for use.",
   "Recolor.TOOLTIP_DESCRIPTION[ResetPaletteChoosersToNone]": "Resets the palette choosers channels to all be None.",
   "Options.OPTION[Recolor.Recolor.Mod.Setting.RestoreDefaultPalettes]": "Restore Default Palettes and Subcategories.",
