removed ar-sa moved pt-pt

--- a/Recolor/lang/pt-PT.json
+++ b/Recolor/lang/pt-PT.json
@@ -22,18 +22,13 @@
   "Recolor.TOOLTIP_DESCRIPTION[Matching]": "Altera as cores de todos os assets com a mesma malha, variação de cor (e estação, se aplicável). A instância única irá sobrepor-se a esta definição para essa instância.",
   "Recolor.SECTION_TITLE[Selection]": "Seleção",
   "Recolor.TOOLTIP_TITLE[SingleSelection]": "Único",
-  "Recolor.TOOLTIP_DESCRIPTION[SingleSelection]": "Altera as cores de um único edifício, prop ou veículo.",
   "Recolor.TOOLTIP_TITLE[RadiusSelection]": "Seleção por raio",
-  "Recolor.TOOLTIP_DESCRIPTION[RadiusSelection]": "Altera as cores da instância única de edifícios, props, e/ou veículos dentro do raio.",
   "Recolor.TOOLTIP_DESCRIPTION[IncreaseRadius]": "Aumentar o raio.",
   "Recolor.TOOLTIP_DESCRIPTION[DecreaseRadius]": "Diminuir o raio.",
   "Recolor.SECTION_TITLE[Radius]": "Raio",
   "Recolor.SECTION_TITLE[Filter]": "Filtro",
-  "Recolor.TOOLTIP_TITLE[BuildingFilter]": "Filtro de edifícios",
   "Recolor.TOOLTIP_DESCRIPTION[BuildingFilter]": "A ferramenta de pintura de cores irá alterar as cores da instância única de edifícios.",
-  "Recolor.TOOLTIP_TITLE[PropFilter]": "Filtro de props",
   "Recolor.TOOLTIP_DESCRIPTION[PropFilter]": "A ferramenta de pintura de cores irá alterar as cores da instância única de props.",
-  "Recolor.TOOLTIP_TITLE[VehicleFilter]": "Filtro de veículos",
   "Recolor.TOOLTIP_DESCRIPTION[VehicleFilter]": "A ferramenta de pintura de cores irá alterar as cores da instância única de veículos.",
   "Recolor.TOOLTIP_TITLE[PaintToolMode]": "Pintura",
   "Recolor.TOOLTIP_DESCRIPTION[PaintToolMode]": "Clique esquerdo: Altera as cores da instância única ou variações de cor correspondentes numa seleção. Clique direito: Repõe as cores da instância única para a variação de cor ou repõe as variações de cor personalizadas para as originais.",
@@ -69,6 +64,8 @@
   "Options.OPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor",
   "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Com confirmação, isto irá repor as teclas de atalho do mod Recolor.",
   "Options.WARNING[Recolor.Recolor.Mod.Setting.ResetKeybindSettings]": "Repor definições das teclas do mod Recolor?",
+  "Options.OPTION[Recolor.Recolor.Mod.Setting.AlwaysMinimizedAtGameStart]": "Sempre minimizado ao iniciar o jogo",
+  "Options.OPTION_DESCRIPTION[Recolor.Recolor.Mod.Setting.AlwaysMinimizedAtGameStart]": "Quando ativado, o painel Recolor sempre iniciará minimizado. Quando desativado, o painel de Recolor iniciará minimizado ou não com base em se foi minimizado ou não na última vez que fechaste o jogo.",
   "Recolor.MOUSE_TOOLTIP[SingleInstancePlantWarning]": "Alterações de cor de instâncias únicas para plantas não são suportadas atualmente.",
   "Recolor.MOUSE_TOOLTIP[HasCustomMeshColorWarning]": "Não é possível alterar a variação de cor neste caso porque tem cores de instância personalizadas.",
   "Recolor.MOUSE_TOOLTIP[SelectANetLaneFence]": "Seleccionar uma NetLane ou Vedação.",
@@ -85,5 +82,6 @@
   "Recolor.TOOLTIP_DESCRIPTION[MatchingSubmeshes]": "Altera as cores dos sub-materiais com nomes idênticos.",
   "Recolor.TOOLTIP_TITLE[AllSubmeshes]": "Todos os sub-materiais",
   "Recolor.TOOLTIP_DESCRIPTION[AllSubmeshes]": "Altera as cores de todos os sub-materiais.",
-  "Recolor.SECTION_TITLE[SubMeshes]": "Sub-materiais"
+  "Recolor.SECTION_TITLE[SubMeshes]": "Sub-materiais",
+  "Options.Recolor.Recolor.Mod.PALETTECHOOSERBEHAVIOR[Reset]": "Repor"
 }
